# Ganymede

./: .gitignore  AGENTS.md  BUILD.md  index.html  package-lock.json  package.json
.github/workflows/: beta-build.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  auth.rs  checkin.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  reminders.rs  tests.rs
src/lib/: Shell.svelte  Sidebar.svelte  Topbar.svelte  api.ts  tunes.ts  types.ts
src/lib/components/: AiPanel.svelte  CommandPalette.svelte  GanymedeMark.svelte  IssueModal.svelte  LockScreen.svelte  Onboarding.svelte  QuickAdd.svelte  ReminderDialog.svelte  ReminderNotification.svelte  Toaster.svelte
src/lib/stores/: app.ts
src/lib/views/: AiView.svelte  BoardView.svelte  CheckinView.svelte  DashboardView.svelte  FollowupsView.svelte  IdeasView.svelte  InitiativesView.svelte  IssuesView.svelte  PendingOnMeView.svelte  ProjectDetailView.svelte  ProjectsView.svelte  SettingsView.svelte
src/styles/: global.css
