[package]
name = "ganymede-app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "ganymede_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
